# caer

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.Windows  README.md  README.porting  dv-modules.cmake  libcaersdk.pc  libdvsdk.pc.in  log.txt  sonar-project.properties
caer-sdk/: BaseModule.hpp  CMakeLists.txt  config.hpp  log.hpp  module.h  module.hpp  utils.h
caer-sdk/config/: dvConfig.h  dvConfig.hpp
caer-sdk/sshs/: dvConfig.hpp  sshs.h  sshs.hpp
cmakemod/: CheckAtomic.cmake  available_targets  dv-modules.cmake  dvConfig.cmake.in
docs/: davis-2cams-config.xml  davis-caffe-example.xml  davis-config.xml  davis-play-file.xml  davis-record-file.xml  dvs128-config.xml
dv-sdk/: BaseModule.hpp  CMakeLists.txt  buffers.h  config.hpp  log.hpp  mainloop.h  module.h  module.hpp  module_base.hpp  module_io.hpp  processing.hpp  utils.h
dv-sdk/config/: dvConfig.h  dvConfig.hpp
dv-sdk/cross/: c11threads_posix.h  portable_io.h  portable_threads.h  portable_time.h
dv-sdk/data/: cvector.hpp  cvector_proxy.hpp  dv-sdk-flatc.sh  event.fbs  event.hpp  event_base.hpp  frame.fbs  frame.hpp  frame8.fbs  frame_base.hpp  imu.fbs  imu.hpp  imu_base.hpp  polarity.fbs  trigger.fbs  trigger.hpp  trigger_base.hpp  types.hpp  wrappers.hpp
dv-sdk/data/flatbuffers/: flatbuffers.h  flatc
dv-sdk/events/: cptriterator.hpp  cstring.hpp  cvector.hpp  cvector_proxy.hpp  dv-sdk-flatc.sh  flatc  flatc-dv.sh  frame.fbs  frame8.fbs  frame8.h  frame8.hpp  polarity.fbs  polarity.h  polarity.hpp  test.fbs  test.hpp  types.hpp
dv-sdk/events/flatbuffers/: base.h  flatbuffers.h  minireflect.h  util.h
dv-sdk/processing/: core.hpp  event.hpp  eventproc.hpp  frame.hpp
ext/: net_rw.h
flatbuffers/: dv-sdk-flatc.sh
include/: CMakeLists.txt
include/dv-sdk/: CMakeLists.txt  module.h  module_base.hpp  utils.h
include/dv-sdk/config/: dvConfig.h  dvConfig.hpp
include/dv-sdk/cross/: asio_tcptlssocket.hpp  portable_threads.h
include/dv-sdk/data/: event.hpp  frame.fbs  frame.hpp  frame_base.hpp  imu.fbs  trigger.hpp  wrappers.hpp
modules/: CMakeLists.txt
modules/accumulator/: CMakeLists.txt  accumulator.cpp
modules/cameracalibration/: CMakeLists.txt  calibration.cpp  calibration.hpp  calibration_settings.h  calibration_wrapper.cpp  calibration_wrapper.h  cameracalibration.c
modules/cameras/: CMakeLists.txt  aedat4_convert.cpp  aedat4_convert.h  davis.c  davis_rpi.c  davis_utils.h  dvs128.c  dvs132s.c  edvs.c
modules/dvsnoisefilter/: CMakeLists.txt  dvsnoisefilter.c  dvsnoisefilter.cpp
modules/frameenhancer/: CMakeLists.txt  frameenhancer.c  frameenhancer.cpp
modules/framestatistics/: CMakeLists.txt  framestatistics.cpp
modules/inout/: CMakeLists.txt  inout_common.h
modules/inout/in/: CMakeLists.txt  file.c  input_common.c  input_common.h  net_tcp.c  unix_socket.c
modules/lenscalibration/: CMakeLists.txt  lenscalibration.cpp
modules/output/: CMakeLists.txt  dv_output.hpp  net_tcp_server.cpp
modules/statistics/: CMakeLists.txt  statistics.c  statistics.h
modules/undistort/: CMakeLists.txt  undistort.cpp
modules/visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.hpp  visualizer_handlers.cpp  visualizer_renderers.cpp  visualizer_renderers.hpp
modules/visualizer/ext/fonts/: LiberationSans-Regular.h
modules/visualizer/ext/sfml/: helpers.hpp  line.hpp
src/: CMakeLists.txt  asio.h  caer-bin  config.cpp  config.h  config.hpp  config_server.cpp  config_server.h  devices_discovery.cpp  devices_discovery.hpp  dv_module_control.fbs  dv_module_control.hpp  log.c  log.cpp  log.h  log.hpp  main.cpp  main.hpp  mainloop.cpp  mainloop.h  mainloop_sdk.cpp  module.cpp  module.h  module.hpp  module_sdk.cpp  modules_discovery.cpp  modules_discovery.hpp  portability_sdk.cpp  sdk_base.cpp  sdk_module.cpp  service.cpp  service.h  service.hpp  types.cpp  types.hpp
src/config_server/: asio.h  caer_config_action_data.h  config_action_data.h  config_server.cpp  config_server.h  config_server_actions.cpp  config_server_actions.h  config_server_communication.md  config_server_connection.cpp  config_server_connection.h  config_server_main.h  config_server_main.hpp  config_updater.h  dv_config_action_data.fbs  dv_config_action_data.h  dv_config_action_data.hpp
src/config_tree/: helper.cpp  internal.hpp  node.cpp  tree.cpp
src/sdk_lib/: CMakeLists.txt  sdk_base.cpp  sdk_cross.cpp  sdk_module.cpp
src/sshs/: sshs.cpp  sshs_helper.cpp  sshs_internal.hpp  sshs_node.cpp
utils/: CMakeLists.txt
utils/caerctl/: caer-ctl  caerctl.cpp
utils/dv-control/: .gitignore  CMakeLists.txt  dv-control  dv-control.cpp
utils/ext/linenoise-ng/: linenoise.cpp
utils/tcpststat/: tcpststat.c
utils/udpststat/: udpststat.c
utils/unixststat/: unixststat.c
