ADD_LIBRARY(dvs128 SHARED dvs128.c)

SET_TARGET_PROPERTIES(dvs128
	PROPERTIES
	PREFIX "dv_"
)

TARGET_LINK_LIBRARIES(dvs128 ${DV_LIBS})

INSTALL(TARGETS dvs128 DESTINATION ${DV_MODULES_DIR})

ADD_LIBRARY(edvs SHARED edvs.c)

SET_TARGET_PROPERTIES(edvs
	PROPERTIES
	PREFIX "dv_"
)

TARGET_LINK_LIBRARIES(edvs ${DV_LIBS})

INSTALL(TARGETS edvs DESTINATION ${DV_MODULES_DIR})

ADD_LIBRARY(davis SHARED davis.c)

SET_TARGET_PROPERTIES(davis
	PROPERTIES
	PREFIX "dv_"
)

TARGET_LINK_LIBRARIES(davis ${DV_LIBS})

INSTALL(TARGETS davis DESTINATION ${DV_MODULES_DIR})

IF (OS_LINUX)
	# Raspberry-Pi camera module support (Linux-only).
	ADD_LIBRARY(davis_rpi SHARED davis_rpi.c)

	SET_TARGET_PROPERTIES(davis_rpi
		PROPERTIES
		PREFIX "dv_"
	)

	TARGET_LINK_LIBRARIES(davis_rpi ${DV_LIBS})

	INSTALL(TARGETS davis_rpi DESTINATION ${DV_MODULES_DIR})
ENDIF()

ADD_LIBRARY(dvs132s SHARED dvs132s.c)

SET_TARGET_PROPERTIES(dvs132s
    PROPERTIES
    PREFIX "dv_"
)

TARGET_LINK_LIBRARIES(dvs132s ${DV_LIBS})

INSTALL(TARGETS dvs132s DESTINATION ${DV_MODULES_DIR})
