ADD_LIBRARY(frameenhancer SHARED frameenhancer.cpp)

SET_TARGET_PROPERTIES(frameenhancer
	PROPERTIES
	PREFIX "dv_"
)

TARGET_LINK_LIBRARIES(frameenhancer PRIVATE ${DV_LIBS})
TARGET_INCLUDE_DIRECTORIES(frameenhancer PRIVATE ${DV_INCDIRS})

INSTALL(TARGETS frameenhancer DESTINATION ${DV_MODULES_DIR})
