ADD_LIBRARY(framestatistics SHARED framestatistics.cpp)

SET_TARGET_PROPERTIES(framestatistics
	PROPERTIES
	PREFIX "dv_"
)

TARGET_LINK_LIBRARIES(framestatistics PRIVATE ${DV_LIBS})
TARGET_INCLUDE_DIRECTORIES(framestatistics PRIVATE ${DV_INCDIRS})

INSTALL(TARGETS framestatistics DESTINATION ${DV_MODULES_DIR})
