# Not supported on Windows right now, pending switch to boost.
IF (OS_WINDOWS OR CROSS_COMPILE)
	RETURN()
ENDIF()

# Add support for PNG compression via libpng.
PKG_CHECK_MODULES(PNGCOMPR libpng>=1.6)

IF (PNGCOMPR_FOUND)
	ADD_DEFINITIONS(-DENABLE_INOUT_PNG_COMPRESSION=1)

	SET(PNGCOMPR_INCDIRS ${DV_INCDIRS} ${PNGCOMPR_INCLUDE_DIRS})
	SET(PNGCOMPR_LIBDIRS ${DV_LIBDIRS} ${PNGCOMPR_LIBRARY_DIRS})
	SET(PNGCOMPR_LIBS ${DV_LIBS} ${PNGCOMPR_LIBRARIES})

	INCLUDE_DIRECTORIES(${PNGCOMPR_INCDIRS})
	LINK_DIRECTORIES(${PNGCOMPR_LIBDIRS})

	SET(DV_INCDIRS ${PNGCOMPR_INCDIRS})
	SET(DV_LIBDIRS ${PNGCOMPR_LIBDIRS})
	SET(DV_LIBS ${PNGCOMPR_LIBS})
ENDIF()

ADD_SUBDIRECTORY(in)
ADD_SUBDIRECTORY(out)
