IF (NOT ENABLE_VISUALIZER)
	SET(ENABLE_VISUALIZER 0 CACHE BOOL "Enable the visualizer module, based on the SFML C++ library.")
ENDIF()

IF (ENABLE_VISUALIZER)
	# Search for external libraries with pkg-config.
	INCLUDE(FindPkgConfig)

	# Visualizer support via the SFML C++ library
	PKG_CHECK_MODULES(SFML REQUIRED sfml-graphics>=2.3.0)

	SET(VISUALIZER_LIBS ${DV_LIBS} ${SFML_LIBRARIES})
	SET(VISUALIZER_INCDIRS ${DV_INCDIRS} ${SFML_INCLUDE_DIRS})

	PKG_CHECK_MODULES(GLEW REQUIRED glew>=1.10.0)

	SET(VISUALIZER_LIBS ${VISUALIZER_LIBS} ${GLEW_LIBRARIES})
	SET(VISUALIZER_INCDIRS ${VISUALIZER_INCDIRS} ${GLEW_INCLUDE_DIRS})

	ADD_LIBRARY(visualizer SHARED visualizer.cpp visualizer_renderers.cpp)

	SET_TARGET_PROPERTIES(visualizer
		PROPERTIES
		PREFIX "dv_"
	)

	TARGET_LINK_LIBRARIES(visualizer PRIVATE ${VISUALIZER_LIBS})
	TARGET_INCLUDE_DIRECTORIES(visualizer PRIVATE ${VISUALIZER_INCDIRS})

	INSTALL(TARGETS visualizer DESTINATION ${DV_MODULES_DIR})
ENDIF()
